# efb-qq-plugin-go-cqhttp

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml  setup.py
efb_qq_plugin_coolq/: CoolQ.py  __version__.py
efb_qq_plugin_go_cqhttp/: ChatMgr.py  CoolQ.py  GoCQHttp.py  MsgDecorator.py  Utils.py  __init__.py
lib/silkv3/src/: Decoder.c
lib/silkv3/test/: Encoder.c
